fix grid view on mobile

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -194,6 +194,10 @@ img.navbar__logo {
             display: none;
 
         }
+
+        .m {
+            grid-area: 1/1/-1/-1;
+        }
     }    
 }
 
